add Location model class

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -35,5 +34,16 @@
             android:layout_height="wrap_content"
             android:text="Address"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/checkInButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Check In" />
+
+        <ListView
+            android:id="@+id/locationsListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
