--- a/app/src/main/res/layout/locations_row.xml
+++ b/app/src/main/res/layout/locations_row.xml
@@ -27,6 +27,10 @@
             android:scrollbars = "vertical"
             android:textSize="15sp" android:textColor="#FFFFFF"
             android:background="#FFBBAACC" />
+        <TextView android:id="@+id/customNameTextView" android:layout_width="fill_parent"
+            android:layout_height="wrap_content" android:layout_weight="1"
+            android:gravity="center_vertical" android:textSize="18sp"
+            android:textColor="#FFFFFF" android:background="@color/colorPrimaryDark" />
 
     </LinearLayout>
 </RelativeLayout>
