--- a/app/src/main/res/layout/locations_row.xml
+++ b/app/src/main/res/layout/locations_row.xml
@@ -6,6 +6,12 @@
     <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
         android:layout_height="fill_parent" android:id="@+id/TextLayout">
+
+        <TextView android:id="@+id/locationNameTextView" android:layout_width="fill_parent"
+            android:layout_height="wrap_content" android:layout_weight="1"
+            android:gravity="center_vertical" android:textSize="18sp"
+            android:textColor="#FFBBAACC" android:background="#FFBBAACC" />
+
         <TextView android:id="@+id/longTextView" android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:layout_weight="1"
             android:gravity="center_vertical" android:textSize="18sp"
@@ -17,20 +23,19 @@
             android:scrollbars = "vertical"
             android:textSize="15sp" android:textColor="#FFFFFF"
             android:background="#FFBBAACC" />
-        <TextView android:id="@+id/timeTextView" android:layout_width="fill_parent"
+
+        <TextView android:id="@+id/addressTextView" android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:layout_weight="1"
             android:gravity="center_vertical" android:textSize="18sp"
             android:textColor="#FFFFFF" android:background="@color/colorPrimaryDark" />
+
         <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/addressTextView"
+            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/timeTextView"
             android:singleLine="true" android:ellipsize="marquee"
             android:scrollbars = "vertical"
             android:textSize="15sp" android:textColor="#FFFFFF"
             android:background="#FFBBAACC" />
-        <TextView android:id="@+id/customNameTextView" android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1"
-            android:gravity="center_vertical" android:textSize="18sp"
-            android:textColor="#FFFFFF" android:background="@color/colorPrimaryDark" />
+
 
     </LinearLayout>
 </RelativeLayout>
