--- a/app/src/main/res/layout/locations_row.xml
+++ b/app/src/main/res/layout/locations_row.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:padding="6dip">
 
-    <LinearLayout android:orientation="vertical"
-       android:layout_width="fill_parent"
-        android:layout_height="fill_parent" android:id="@+id/TextLayout">
+    <TextView
+        android:id="@+id/locationNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFBBAACC"
+        android:gravity="center"
+        android:textSize="15sp" />
 
-        <TextView android:id="@+id/locationNameTextView" android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1"
-            android:gravity="center_vertical" android:textSize="18sp"
-            android:textColor="#FFBBAACC" android:background="#FFBBAACC" />
+    <TextView
+        android:id="@+id/longTextView"
+        android:layout_below="@+id/locationNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:textSize="15sp" />
 
-        <TextView android:id="@+id/longTextView" android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1"
-            android:gravity="center_vertical" android:textSize="18sp"
-            android:textColor="#FFFFFF" android:background="@color/colorPrimaryDark" />
+    <TextView
+        android:id="@+id/latTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFBBAACC"
+        android:layout_below="@+id/longTextView"/>
 
-        <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/latTextView"
-            android:singleLine="true" android:ellipsize="marquee"
-            android:scrollbars = "vertical"
-            android:textSize="15sp" android:textColor="#FFFFFF"
-            android:background="#FFBBAACC" />
+    <TextView
+        android:id="@+id/addressRowTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/latTextView"
+        android:background="@color/colorPrimary"/>
 
-        <TextView android:id="@+id/addressTextView" android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1"
-            android:gravity="center_vertical" android:textSize="18sp"
-            android:textColor="#FFFFFF" android:background="@color/colorPrimaryDark" />
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFBBAACC"
+        android:layout_below="@+id/addressRowTextView" />
 
-        <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/timeTextView"
-            android:singleLine="true" android:ellipsize="marquee"
-            android:scrollbars = "vertical"
-            android:textSize="15sp" android:textColor="#FFFFFF"
-            android:background="#FFBBAACC" />
-
-
-    </LinearLayout>
 </RelativeLayout>
