--- a/app/src/main/res/layout/locations_row.xml
+++ b/app/src/main/res/layout/locations_row.xml
@@ -22,6 +22,7 @@
 
     <TextView
         android:id="@+id/latTextView"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFBBAACC"
@@ -29,6 +30,7 @@
 
     <TextView
         android:id="@+id/addressRowTextView"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/latTextView"
@@ -36,6 +38,7 @@
 
     <TextView
         android:id="@+id/timeTextView"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFBBAACC"
